[package]
name = "screen-pinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
egui-wgpu = { version = "0.23.0", features = ["winit"] }
pollster = "0.3.0"
wgpu = "0.17.1"
winit = "0.28.7"
egui-winit = "0.23.0"
image = { version = "0.24", features = ["jpeg", "png"] }
include_dir = "0.7.3"
device_query = "1.1.3"
rdev = "0.5.3"
windows = { version = "0.51.1", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
] }
raw-window-handle = "0.5.2"
tray-icon = "0.9.0"
rodio = "0.17.1"
crossbeam = { version = "0.8.2", features = ["crossbeam-queue"] }
